#109 update download medical record to excel and tests #111 update privacy policy

--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -25,7 +25,8 @@
       </p>
       <p  style="margin-bottom: 20px;">
         <strong>Contacte-nos:</strong> <br>
-        Encarregado de Proteção de Dados (DPO): {{ 'mtf&#64;isep.ipp.pt' }}
+        Encarregado de Proteção de Dados (DPO) - Paulo Alexandre Sousa
+        Email: {{ 'mtf&#64;isep.ipp.pt' }}
       </p>
 
       <h4>2. Dados Pessoais que Recolhemos</h4>
@@ -37,7 +38,7 @@
               <li><strong>Saúde:</strong> Histórico médico, alergias, contacto de emergência, número de registo médico.</li>
           </ul>
           Os dados são fornecidos diretamente pelos utilizadores ou, quando aplicável, através de terceiros, como hospitais parceiros.
-        
+
 
       <h4  style="margin-top: 20px;">3. Tipo de Tratamento dos Dados Pessoais</h4>
       <p  style="margin-bottom: 20px;">
@@ -64,7 +65,7 @@
               <li><strong>Cumprimento de obrigações legais:</strong> Conservação de nome, morada, histórico médico, e alergias por 20 anos, conforme exigido por lei.</li>
               <li><strong>Monitorização do sistema:</strong> Nome, email, alergias e histórico de acessos para garantir a eficiência e proteção dos dados.</li>
           </ul>
-  
+
 
       <h4>5. Base Legal para o Tratamento</h4>
       <p  style="margin-bottom: 20px;">
@@ -76,7 +77,7 @@
               <li><strong>Interesse Vital:</strong> Em emergências médicas, para proteger a vida ou integridade do titular dos dados.</li>
               <li><strong>Interesse Legítimo:</strong> Para garantir a segurança do sistema e melhorar os nossos serviços.</li>
           </ul>
-  
+
 
       <h4>6. Com Quem Partilhamos os Seus Dados</h4>
       <p  style="margin-bottom: 20px;">
@@ -86,7 +87,7 @@
               <li><strong>Autoridades legais:</strong> Quando exigido por lei.</li>
           </ul>
           Todos os terceiros com quem colaboramos estão sujeitos a acordos de confidencialidade e ao cumprimento do RGPD.
-  
+
 
       <h4  style="margin-top: 20px;">7. Tempo de Conservação dos Dados</h4>
       <p  style="margin-bottom: 20px;">
@@ -109,7 +110,7 @@
               <li><strong>Oposição:</strong> Pode opor-se ao tratamento dos seus dados em certas situações.</li>
               <li><strong>Limitação:</strong> Pode solicitar a limitação do tratamento dos seus dados em condições específicas.</li>
           </ul>
-  
+
 
       <p style="margin-bottom: 20px;">
           Para exercer os seus direitos, contacte-nos através do email {{ 'mtf&#64;isep.ipp.pt' }}.
@@ -118,23 +119,23 @@
 
       <h4  style="margin-top: 20px;"> 9. Segurança dos Dados </h4>
       <p  style="margin-bottom: 20px;">
-        Implementamos medidas de segurança técnicas e organizacionais para proteger os seus dados pessoais contra acesso não autorizado, alteração, destruição ou divulgação. Asseguramos também a encriptação e monitorização regular do sistema. 
+        Implementamos medidas de segurança técnicas e organizacionais para proteger os seus dados pessoais contra acesso não autorizado, alteração, destruição ou divulgação. Asseguramos também a encriptação e monitorização regular do sistema.
       </p>
 
       <h4  style="margin-top: 20px;"> 10. Violações de Dados </h4>
       <p  style="margin-bottom: 20px;">
-        Em caso de violação de dados pessoais, notificaremos a Comissão Nacional de <strong> Proteção de Dados (CNPD)</strong> em até 72 horas após o incidente e informaremos os titulares dos dados quando for aplicável. 
+        Em caso de violação de dados pessoais, notificaremos a Comissão Nacional de <strong> Proteção de Dados (CNPD)</strong> em até 72 horas após o incidente e informaremos os titulares dos dados quando for aplicável.
       </p>
 
       <h4  style="margin-top: 20px;"> 11. Atualizações desta Política </h4>
       <p  style="margin-bottom: 20px;">
-        Esta Política de Privacidade pode ser atualizada periodicamente para refletir mudanças legais ou operacionais. Recomendamos que consulte esta página regularmente.        
+        Esta Política de Privacidade pode ser atualizada periodicamente para refletir mudanças legais ou operacionais. Recomendamos que consulte esta página regularmente.
       </p>
 
       <p style="margin-bottom: 20px;">
-        <strong> Data da última atualização: 15 de dezembro de 2024 </strong> 
+        <strong> Data da última atualização: 15 de dezembro de 2024 </strong>
     </p>
-         
+
 
       <div class="text-center">
           <button class="btn btn-success me-3" (click)="acceptPolicy()">Accept</button>
@@ -286,7 +287,18 @@
     </p>
     <p style="margin-bottom: 20px;">
       <strong>Contacte-nos:</strong> <br>
-      Encarregado de Proteção de Dados (DPO): {{ 'mtf&#64;isep.ipp.pt' }}
+      <span style="display: block; text-indent: 20px;">
+        Encarregado de Proteção de Dados (DPO) – Paulo Alexandre Sousa
+      </span> 
+      <span style="display: block; text-indent: 20px;">
+        Email: {{ 'pauloSousaDpo&#64;gmail.com' }}
+      </span>
+      <span style="display: block; text-indent: 20px;">
+        Número de telemóvel: 966866765
+      </span> 
+      <span style="display: block; text-indent: 20px;">
+        Morada: Rua Mte. Guilherme Camarinha, 221, 2.º esquerdo
+      </span> 
     </p>
 
     <h4>2. Dados Pessoais que Recolhemos</h4>
@@ -313,20 +325,20 @@
       <li><strong>Consulta:</strong> Permitir acesso ao perfil do paciente por utilizadores autorizados (próprio ou médicos/staff: para confirmar dados, marcar cirurgias e registar o histórico médico do titular).</li>
       <li><strong>Alteração:</strong> Atualizar ou corrigir dados de utilizadores.</li>
       <li><strong>Organização:</strong> Estruturar os dados para consultas futuras.</li>
-      <li><strong>Limitações:</strong> Restringir o acesso com base no papel do utilizador (ex.: pacientes acessam apenas os seus próprios dados).</li>        
+      <li><strong>Limitações:</strong> Restringir o acesso com base no papel do utilizador (ex.: pacientes acessam apenas os seus próprios dados).</li>
     </ul>
 
 
     <h4>4. Finalidades do Tratamento dos Dados</h4>
     <p style="margin-bottom: 20px;">
-      Os dados pessoais recolhidos são tratados para as seguintes finalidades, de acordo com o Artigo 5.º 
+      Os dados pessoais recolhidos são tratados para as seguintes finalidades, de acordo com o Artigo 5.º
       do RGPD:
     <ul>
       <li><strong>Agendamento e gestão de consultas e cirurgias:</strong> Os dados, como nome, email, número de telemóvel, alergias e histórico médico, são utilizados para organizar e gerir consultas e cirurgias com eficiência. Esses dados são essenciais para a prestação de serviços clínicos, garantindo que as necessidades do paciente sejam atendidas adequadamente. </li>
       <li><strong>Personalização de experiências:</strong>Envio de mensagens personalizadas por email (e.g., lembretes de consultas ou outras comunicações relevantes para o paciente). </li>
       <li><strong>Emergências médicas:</strong> Os contactos de emergência e informações de saúde, como histórico médico e alergias, são utilizados para proteger a vida e a integridade física do titular em emergências médica. </li>
       <li><strong>Cumprimento de obrigações legais:</strong> Conservação de nome, morada, histórico médico, e alergias por 20 anos, após o último registro de atividade médica, conforme exigido por lei, uma vez que estes dados são essenciais para assegurar a continuidade dos cuidados de saúde. Para a personalização da experiencia, os dados serão guardados até que o titular solicite a revogação do consentimento ou os dados deixem de ser relevantes para a finalidade. </li>
-      <li><strong>Monitorização do sistema:</strong> Análise de dados como nome, email, histórico de acessos e alergias para garantir a segurança e eficiência do sistema de informação, evitando acessos não autorizados, perdas de dados ou falhas operacionais. 
+      <li><strong>Monitorização do sistema:</strong> Análise de dados como nome, email, histórico de acessos e alergias para garantir a segurança e eficiência do sistema de informação, evitando acessos não autorizados, perdas de dados ou falhas operacionais.
       </li>
       <br> Sendo assim, cada finalidade é justificada conforme os Artigos 6.º e 9.º do RGPD.
     </ul>
@@ -380,14 +392,14 @@
       <li><strong>Portabilidade:</strong> Pode pedir uma cópia dos seus dados em formato eletrônico, na aplicação.
       </li>
       <li><strong>Oposição:</strong> Pode opor-se ao tratamento dos seus dados em certas situações.</li>
-      Caso o titular se recuse a consentir o tratamento dos dados, haverá restrições nas funcionalidades desta aplicação. Se for um paciente, não conseguirá atualizar o seu perfil. Para o caso de um médico ou staff, não será possível registar ou atualizar pacientes, criar ou atualizar alergias, condições médicas, histórico médico ou marcação de cirurgias. 
+      Caso o titular se recuse a consentir o tratamento dos dados, haverá restrições nas funcionalidades desta aplicação. Se for um paciente, não conseguirá atualizar o seu perfil. Para o caso de um médico ou staff, não será possível registar ou atualizar pacientes, criar ou atualizar alergias, condições médicas, histórico médico ou marcação de cirurgias.
       <li><strong>Limitação:</strong> Pode solicitar a limitação do tratamento dos seus dados em condições
         específicas.</li>
     </ul>
 
 
     <p style="margin-bottom: 20px;">
-      Para exercer os seus direitos, contacte-nos através do email {{ 'mtf&#64;isep.ipp.pt' }}.
+      Para exercer os seus direitos, contacte-nos através do email {{ 'pauloSousaDpo&#64;gmail.com' }} ou do número de telemóvel: 966866765.
     </p>
 
     <h4 style="margin-top: 20px;"> 9. Segurança dos Dados </h4>
@@ -577,7 +589,7 @@
 
             <div class="col-12" style="margin-bottom: 20px;">
               <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
-          </div>  
+          </div>
 
             <div class="col-12">
               <button class="btn btn-primary" id="submitRegister" type="submit" [disabled]="myForm.invalid || !isPolicyAccepted" >Submit form</button>
@@ -772,11 +784,11 @@
           </div>
 
           <div class="col-md-8"></div>
-      
-          <hr style="margin: 5px 0;">      
-          
+
+          <hr style="margin: 5px 0;">
+
           <div class="col-md-8"></div>
-          
+
           <!-- Allergies Section -->
           <div class="col-md-1"></div>
           <div class="col-md-10" style="margin-top: 10px; margin-bottom: 0;">
@@ -793,19 +805,19 @@
                   <th>Status</th>
                 </tr>
               </thead>
-              <tbody>               
+              <tbody>
                 <tr *ngFor="let tag of tagsAllergies; let i = index">
                   <td>{{ i + 1 }}</td>
                   <td>{{ tag.designacao }}</td>
                   <td>{{ tag.descricao }}</td>
-                  <td>{{ tag.status }}</td>                 
-                </tr>                
+                  <td>{{ tag.status }}</td>
+                </tr>
               </tbody>
             </table>
           </div>
 
           <div class="col-md-8"></div>
-     
+
 
           <div class="col-md-1"></div>
         <div class="col-md-10" style="margin-bottom: 30px;">
@@ -831,7 +843,7 @@
                 <td>{{ condition.designacao }}</td>
                 <td>{{ condition.descricao }}</td>
                 <td>{{ condition.status }}</td>
-                <td>{{ condition.sintomas }}</td>               
+                <td>{{ condition.sintomas }}</td>
               </tr>
             </tbody>
           </table>
@@ -842,7 +854,7 @@
             <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
             <span class="input-group-text" style="width:60%" id="add">Free text</span>
           </div>
-          
+
           <!-- Tabela será exibida apenas se descricaoList tiver itens -->
           <table *ngIf="descricaoList && descricaoList.length > 0" class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
             <thead>
@@ -858,11 +870,11 @@
               </tr>
             </tbody>
           </table>
-        
+
           <!-- Mensagem para quando não houver dados -->
           <p *ngIf="descricaoList && descricaoList.length === 0" class="text-muted">No descriptions available.</p>
         </div>
-        
+
 
         <div class="col-md-5" style="margin-bottom: 0;">
           <div class="input-group has-validation">
@@ -1067,7 +1079,7 @@
 
           <div class="col-12" style="margin-bottom: 20px;">
             <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
-        </div>  
+        </div>
 
           <button class="btn btn-primary" [disabled]="!isPolicyAccepted" (click)="onUpdatePatient()">Submit form</button>
         </div>
@@ -2158,7 +2170,7 @@
                     </div>
                   </div>
 
-              
+
 
                   <!-- Botão para adicionar mais staff -->
                   <button type="button" class="btn btn-outline-primary" (click)="addRequiredStaff()" style="margin-top:1cm;margin-bottom:0.2cm">Add Staff</button>
@@ -2221,7 +2233,7 @@
 
           <div class="col-12" style="margin-bottom: 20px;">
             <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
-        </div>  
+        </div>
 
 
           <!-- Submit Button -->
@@ -2237,9 +2249,9 @@
   <div id="mapModalContent" class="modal-content" style="height: 75vh;">
     <span (click)="closeModal('listAllergies')" class="close">&times;</span>
     <div>
-      
 
-      <form class="row g-3 needs-validation" novalidate="">  
+
+      <form class="row g-3 needs-validation" novalidate="">
         <div class="col-md-10"></div>
 
 
@@ -2247,7 +2259,7 @@
             <div class="input-group">
             <span class="input-group-text" id="basic-addon1"><i class="bi bi-funnel-fill"></i></span><button class="btn btn-outline-info" (click)="openModal('filterAllergyModal')"> Filter </button>
           </div>
-        </div>    
+        </div>
 
         <!-- Tabela -->
         <div class="col-md-12"  style="overflow: auto; max-height: 60vh; border: 1px solid #ccc; border-radius: 8px; padding: 10px;">
@@ -2262,16 +2274,16 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let request of allergiesList; let i = index" 
-                      (click)="selectAllergie(request.designacao)" 
+                  <tr *ngFor="let request of allergiesList; let i = index"
+                      (click)="selectAllergie(request.designacao)"
                       [ngClass]="{ 'selected-row': selectedAllergie === request.designacao }">
                     <td>{{ i + 1 }}</td>
                     <td>
-                      <input class="selectRequest" 
-                             type="radio" 
-                             id="allergie_{{ request.designacao }}" 
-                             name="id" 
-                             value="{{ request.designacao }}" 
+                      <input class="selectRequest"
+                             type="radio"
+                             id="allergie_{{ request.designacao }}"
+                             name="id"
+                             value="{{ request.designacao }}"
                              [checked]="selectedAllergie === request.designacao" hidden>
                       {{ request.designacao }}
                     </td>
@@ -2361,7 +2373,7 @@
                   <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
               </div>
 
-               <div>  
+               <div>
                   <button class="btn btn-primary" [disabled]="!isPolicyAccepted" (click)="onUpdateAllergy()">Submit form</button>
                 </div>
 
@@ -2702,11 +2714,11 @@
             </div>
           </div>
 
-          
+
 
           <div class="col-12" style="margin-bottom: 20px;">
             <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
-        </div>  
+        </div>
 
 
           <!-- Submit Button -->
