--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -859,7 +859,18 @@ id="updateAppointmentModal" class="modal">
       </p>
       <p style="margin-bottom: 20px;">
         <strong>Contacte-nos:</strong> <br>
-        Encarregado de Proteção de Dados (DPO): {{ 'mtf&#64;isep.ipp.pt' }}
+        <span style="display: block; text-indent: 20px;">
+          Encarregado de Proteção de Dados (DPO) – Paulo Alexandre Sousa
+        </span> 
+        <span style="display: block; text-indent: 20px;">
+          Email: {{ 'pauloSousaDpo&#64;gmail.com' }}
+        </span>
+        <span style="display: block; text-indent: 20px;">
+          Número de telemóvel: 966866765
+        </span> 
+        <span style="display: block; text-indent: 20px;">
+          Morada: Rua Mte. Guilherme Camarinha, 221, 2.º esquerdo
+        </span> 
       </p>
 
       <h4>2. Dados Pessoais que Recolhemos</h4>
@@ -960,7 +971,7 @@ id="updateAppointmentModal" class="modal">
 
 
       <p style="margin-bottom: 20px;">
-        Para exercer os seus direitos, contacte-nos através do email {{ 'mtf&#64;isep.ipp.pt' }}.
+        Para exercer os seus direitos, contacte-nos através do email {{ 'pauloSousaDpo&#64;gmail.com' }} ou do número de telemóvel: 966866765.
       </p>
 
       <h4 style="margin-top: 20px;"> 9. Segurança dos Dados </h4>
