--- a/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
+++ b/angular-three/src/app/pages/Doctor/doctor/doctor.component.html
@@ -473,13 +473,51 @@
   <div [ngStyle]="{'display': isModalOpen('mapModal') ? 'block' : 'none'}" id="mapModal" class="modal" style=" padding-top: 20px;">
       <div id="mapModalContent" class="modal-content" style="height: 95vh;">
           <span (click)="closeModal('mapModal')" class="close">&times;</span>
-          <button (click)="doTheClick()">Substituir a interação com este botão por interação com a tecla "i"</button>
-          <br>
-          <br>
-          <button>Valor de algo que tá duas camadas abaixo: {{thumbRaiser?.selectedDate}}</button>
-          <br>
-          <br>
           <input type="datetime-local" class="form-control" id="mapTime" formControlName="mapTime" placeholder="" (change)="onMapTimeChange($event)">
+          <br><br>
+
+          <div id="floating-info-div" *ngIf="roomData">
+            <div id="floating-table-container">
+              <table class="info" id="info-table">
+                <tr>
+                  <th colspan="2" class="table-header">Room Information</th>
+                </tr>
+                <tr>
+                  <td>Room Number:</td>
+                  <td>{{roomData.roomNumber}}</td>
+                </tr>
+                <tr>
+                  <td>Capacity:</td>
+                  <td>{{roomData.capacity}}</td>
+                </tr>
+                <tr>
+                  <td>Status:</td>
+                  <td>{{roomData.status}}</td>
+                </tr>
+                <tr>
+                  <td>Assigned Equipment:</td>
+                  <td>
+                    <ul>
+                      <li *ngFor="let equipment of roomData?.assignedEquipment">{{equipment}}</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Maintenance Slots:</td>
+                  <td>
+                    <ul>
+                      <li *ngFor="let slot of roomData?.maintenanceSlots">
+                        Start: {{slot?.startTime}} <br />
+                        End: {{slot?.endTime}}
+                      </li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+
           <div #canvasContainer class="canvas-container" id="canvasContainer">
             <div id="parent" hidden>
               <div id="views-panel" hidden>
